fixed dark mode tabs on admin

--- a/src/app/pages/feature/manage/managefeature.page.scss
+++ b/src/app/pages/feature/manage/managefeature.page.scss
@@ -33,6 +33,8 @@ app-managefeature {
       padding: 5px;
       margin: 5px;
       border-radius: 10px;
+      background-color: var(--ion-color-secondary);
+
       ion-item {
         .menu-label {
           font-size: 12px !important;
